esp-idf/build/log/idf_py_stdout_output_9139
[1/9] Performing build step for 'bootloader'
[1/1] cd /project/build/bootloader/esp-idf/esptool_py && /opt/esp/python_env/idf5.4_py3.12_env/bin/python /opt/esp/idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /project/build/bootloader/bootloader.bin
Bootloader binary size 0x51d0 bytes. 0x2e30 bytes (36%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/gatt_svr.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/gatt_svr.c.obj 
ccache /opt/esp/tools/riscv32-esp-elf/esp-14.2.0_20250730/riscv32-esp-elf/bin/riscv32-esp-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4.3-904-gacd7b505de\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/project/build/config -I/project/main -I/opt/esp/idf/components/newlib/platform_include -I/opt/esp/idf/components/freertos/config/include -I/opt/esp/idf/components/freertos/config/include/freertos -I/opt/esp/idf/components/freertos/config/riscv/include -I/opt/esp/idf/components/freertos/FreeRTOS-Kernel/include -I/opt/esp/idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/opt/esp/idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -I/opt/esp/idf/components/freertos/esp_additions/include -I/opt/esp/idf/components/esp_hw_support/include -I/opt/esp/idf/components/esp_hw_support/include/soc -I/opt/esp/idf/components/esp_hw_support/include/soc/esp32c3 -I/opt/esp/idf/components/esp_hw_support/dma/include -I/opt/esp/idf/components/esp_hw_support/ldo/include -I/opt/esp/idf/components/esp_hw_support/debug_probe/include -I/opt/esp/idf/components/esp_hw_support/port/esp32c3/. -I/opt/esp/idf/components/esp_hw_support/port/esp32c3/include -I/opt/esp/idf/components/heap/include -I/opt/esp/idf/components/heap/tlsf -I/opt/esp/idf/components/log/include -I/opt/esp/idf/components/soc/include -I/opt/esp/idf/components/soc/esp32c3 -I/opt/esp/idf/components/soc/esp32c3/include -I/opt/esp/idf/components/soc/esp32c3/register -I/opt/esp/idf/components/hal/platform_port/include -I/opt/esp/idf/components/hal/esp32c3/include -I/opt/esp/idf/components/hal/include -I/opt/esp/idf/components/esp_rom/include -I/opt/esp/idf/components/esp_rom/esp32c3/include -I/opt/esp/idf/components/esp_rom/esp32c3/include/esp32c3 -I/opt/esp/idf/components/esp_rom/esp32c3 -I/opt/esp/idf/components/esp_common/include -I/opt/esp/idf/components/esp_system/include -I/opt/esp/idf/components/esp_system/port/soc -I/opt/esp/idf/components/esp_system/port/include/riscv -I/opt/esp/idf/components/esp_system/port/include/private -I/opt/esp/idf/components/riscv/include -I/opt/esp/idf/components/lwip/include -I/opt/esp/idf/components/lwip/include/apps -I/opt/esp/idf/components/lwip/include/apps/sntp -I/opt/esp/idf/components/lwip/lwip/src/include -I/opt/esp/idf/components/lwip/port/include -I/opt/esp/idf/components/lwip/port/freertos/include -I/opt/esp/idf/components/lwip/port/esp32xx/include -I/opt/esp/idf/components/lwip/port/esp32xx/include/arch -I/opt/esp/idf/components/lwip/port/esp32xx/include/sys -I/opt/esp/idf/components/bt/include/esp32c3/include -I/opt/esp/idf/components/bt/common/osi/include -I/opt/esp/idf/components/bt/common/api/include/api -I/opt/esp/idf/components/bt/common/btc/profile/esp/blufi/include -I/opt/esp/idf/components/bt/common/btc/profile/esp/include -I/opt/esp/idf/components/bt/common/hci_log/include -I/opt/esp/idf/components/bt/common/ble_log/include -I/opt/esp/idf/components/bt/common/tinycrypt/include -I/opt/esp/idf/components/bt/common/tinycrypt/port -I/opt/esp/idf/components/bt/host/nimble/nimble/nimble/host/include -I/opt/esp/idf/components/bt/host/nimble/nimble/nimble/include -I/opt/esp/idf/components/bt/host/nimble/nimble/nimble/host/services/ans/include -I/opt/esp/idf/components/bt/host/nimble/nimble/nimble/host/services/bas/include -I/opt/esp/idf/components/bt/host/nimble/nimble/nimble/host/services/dis/include -I/opt/esp/idf/components/bt/host/nimble/nimble/nimble/host/services/gap/include -I/opt/esp/idf/components/bt/host/nimble/nimble/nimble/host/services/gatt/include -I/opt/esp/idf/components/bt/host/nimble/nimble/nimble/host/services/hr/include -I/opt/esp/idf/components/bt/host/nimble/nimble/nimble/host/services/htp/include -I/opt/esp/idf/components/bt/host/nimble/nimble/nimble/host/services/ias/include -I/opt/esp/idf/components/bt/host/nimble/nimble/nimble/host/services/ipss/include -I/opt/esp/idf/components/bt/host/nimble/nimble/nimble/host/services/lls/include -I/opt/esp/idf/components/bt/host/nimble/nimble/nimble/host/services/prox/include -I/opt/esp/idf/components/bt/host/nimble/nimble/nimble/host/services/cts/include -I/opt/esp/idf/components/bt/host/nimble/nimble/nimble/host/services/tps/include -I/opt/esp/idf/components/bt/host/nimble/nimble/nimble/host/services/hid/include -I/opt/esp/idf/components/bt/host/nimble/nimble/nimble/host/services/sps/include -I/opt/esp/idf/components/bt/host/nimble/nimble/nimble/host/services/cte/include -I/opt/esp/idf/components/bt/host/nimble/nimble/nimble/host/util/include -I/opt/esp/idf/components/bt/host/nimble/nimble/nimble/host/store/ram/include -I/opt/esp/idf/components/bt/host/nimble/nimble/nimble/host/store/config/include -I/opt/esp/idf/components/bt/host/nimble/nimble/nimble/host/services/ras/include -I/opt/esp/idf/components/bt/host/nimble/nimble/porting/nimble/include -I/opt/esp/idf/components/bt/host/nimble/port/include -I/opt/esp/idf/components/bt/host/nimble/nimble/nimble/transport/include -I/opt/esp/idf/components/bt/porting/include -I/opt/esp/idf/components/bt/host/nimble/nimble/porting/npl/freertos/include -I/opt/esp/idf/components/bt/host/nimble/esp-hci/include -I/opt/esp/idf/components/esp_timer/include -I/opt/esp/idf/components/esp_wifi/include -I/opt/esp/idf/components/esp_wifi/include/local -I/opt/esp/idf/components/esp_wifi/wifi_apps/include -I/opt/esp/idf/components/esp_wifi/wifi_apps/nan_app/include -I/opt/esp/idf/components/esp_event/include -I/opt/esp/idf/components/esp_phy/include -I/opt/esp/idf/components/esp_phy/esp32c3/include -I/opt/esp/idf/components/esp_netif/include -I/opt/esp/idf/components/nvs_flash/include -I/opt/esp/idf/components/esp_partition/include -march=rv32imc_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=/project=. -fmacro-prefix-map=/opt/esp/idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/gatt_svr.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/gatt_svr.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/gatt_svr.c.obj -c /project/main/gatt_svr.c
/project/main/gatt_svr.c:241:1: warning: 'gatt_svr_chr_access_status' defined but not used [-Wunused-function]
  241 | gatt_svr_chr_access_status(uint16_t conn_handle, uint16_t attr_handle,
      | ^~~~~~~~~~~~~~~~~~~~~~~~~~
/project/main/gatt_svr.c:42:28: error: 'echo_status_uuid' defined but not used [-Werror=unused-const-variable=]
   42 | static const ble_uuid128_t echo_status_uuid =
      |                            ^~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
